--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,14 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/name"/>
+    <TextView
+        android:id="@+id/contactLabel"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:text="Почта:"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/age"/>
 
     <EditText
         android:id="@+id/company"
@@ -63,6 +71,15 @@
         app:layout_constraintTop_toBottomOf="@+id/ageLabel"
         tools:ignore="SpeakableTextPresentCheck"
         />
+    <EditText
+        android:id="@+id/contact"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/contactLabel"
+        tools:ignore="SpeakableTextPresentCheck"
+        />
     <Button
         android:id="@+id/btn"
         android:layout_height="wrap_content"
@@ -72,7 +89,7 @@
         android:onClick="onClick"
         android:text="click"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/age"
+        app:layout_constraintTop_toBottomOf="@+id/contact"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
